src/parser/PAGrammarParser.java
// Generated from PAGrammar.g4 by ANTLR 4.5.3

	// 파서 클래스 헤더 
	package parser;
	import java.util.HashMap;
	import java.util.ArrayList;
	import sim.Instruction;
	import sim.Sim.InstType;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PAGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, NEWLINE=26, RREG=27, FREG=28, FLOAT=29, INT=30, LABEL=31, GOTO=32, 
		ID=33, WS=34, STRING_LITERAL=35, LINE_COMMENT=36;
	public static final int
		RULE_prog = 0, RULE_stmts = 1, RULE_stmt = 2, RULE_arithstmt = 3, RULE_ifstmt = 4, 
		RULE_arrstmt = 5, RULE_loadstorestmt = 6, RULE_asgnstmt = 7, RULE_iostmt = 8, 
		RULE_aexpr = 9, RULE_bexpr = 10, RULE_reg = 11, RULE_factr = 12, RULE_factf = 13;
	public static final String[] ruleNames = {
		"prog", "stmts", "stmt", "arithstmt", "ifstmt", "arrstmt", "loadstorestmt", 
		"asgnstmt", "iostmt", "aexpr", "bexpr", "reg", "factr", "factf"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'program'", "'end'", "':'", "':='", "'if'", "'('", "')'", "'int'", 
		"'float'", "'['", "']'", "'&'", "'*'", "'print'", "'input'", "'+'", "'-'", 
		"'/'", "'%'", "'<'", "'=='", "'<='", "'>='", "'!='", "'>'", null, null, 
		null, null, null, null, "'goto'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "NEWLINE", "RREG", "FREG", "FLOAT", "INT", "LABEL", "GOTO", 
		"ID", "WS", "STRING_LITERAL", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PAGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		// 파서 클래스 멤버 선언부
		// 생성된 코드부
		public ArrayList<Instruction> lines = new ArrayList<Instruction>();
		// 변수 이름 선언부
		public static HashMap<String, Integer> labels = new HashMap<>();
		// 한 줄 코드를 넣는 변수
		String aLine = null;
		int lineno = 0;
		String curLabel;
		public static InstType curType=InstType.none;

	public PAGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Token x;
		public List<TerminalNode> NEWLINE() { return getTokens(PAGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PAGrammarParser.NEWLINE, i);
		}
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(28);
				match(NEWLINE);
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(T__0);
			setState(35);
			match(NEWLINE);
			{
			setState(36);
			stmts();
			}
			setState(37);
			((ProgContext)_localctx).x = match(T__1);
			 
					Instruction result = new Instruction(InstType.endp);
					result.lineno = lineno;
					result.srcln = ((ProgContext)_localctx).x.getLine();
					lines.add(result);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public Token NEWLINE;
		public Token t;
		public StmtContext stmt;
		public List<TerminalNode> NEWLINE() { return getTokens(PAGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PAGrammarParser.NEWLINE, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> LINE_COMMENT() { return getTokens(PAGrammarParser.LINE_COMMENT); }
		public TerminalNode LINE_COMMENT(int i) {
			return getToken(PAGrammarParser.LINE_COMMENT, i);
		}
		public List<TerminalNode> LABEL() { return getTokens(PAGrammarParser.LABEL); }
		public TerminalNode LABEL(int i) {
			return getToken(PAGrammarParser.LABEL, i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitStmts(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(57);
				switch (_input.LA(1)) {
				case NEWLINE:
				case LINE_COMMENT:
					{
					setState(41);
					_la = _input.LA(1);
					if (_la==LINE_COMMENT) {
						{
						setState(40);
						match(LINE_COMMENT);
						}
					}

					setState(43);
					((StmtsContext)_localctx).NEWLINE = match(NEWLINE);
					}
					break;
				case T__4:
				case T__7:
				case T__8:
				case T__12:
				case T__13:
				case T__14:
				case RREG:
				case FREG:
				case LABEL:
				case GOTO:
				case ID:
					{
					curLabel=null; int srcln = 0; 
					setState(48);
					_la = _input.LA(1);
					if (_la==LABEL) {
						{
						setState(45);
						((StmtsContext)_localctx).t = match(LABEL);
						 curLabel = (((StmtsContext)_localctx).t!=null?((StmtsContext)_localctx).t.getText():null); 
						setState(47);
						match(T__2);
						}
					}

					setState(50);
					((StmtsContext)_localctx).stmt = stmt();
					setState(52);
					_la = _input.LA(1);
					if (_la==LINE_COMMENT) {
						{
						setState(51);
						match(LINE_COMMENT);
						}
					}

					setState(54);
					((StmtsContext)_localctx).NEWLINE = match(NEWLINE);

								Instruction result = ((StmtsContext)_localctx).stmt.result;
								if (result == null) break;
								lines.add(result);
								result.label = curLabel;
								labels.put(curLabel, lineno);
								result.lineno = lineno++; 
								result.srcln = ((StmtsContext)_localctx).NEWLINE.getLine();
							
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << NEWLINE) | (1L << RREG) | (1L << FREG) | (1L << LABEL) | (1L << GOTO) | (1L << ID) | (1L << LINE_COMMENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Instruction result;
		public ArithstmtContext arithstmt;
		public IostmtContext iostmt;
		public IfstmtContext ifstmt;
		public ArrstmtContext arrstmt;
		public AsgnstmtContext asgnstmt;
		public LoadstorestmtContext loadstorestmt;
		public Token t;
		public Token v;
		public ArithstmtContext arithstmt() {
			return getRuleContext(ArithstmtContext.class,0);
		}
		public IostmtContext iostmt() {
			return getRuleContext(IostmtContext.class,0);
		}
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public ArrstmtContext arrstmt() {
			return getRuleContext(ArrstmtContext.class,0);
		}
		public AsgnstmtContext asgnstmt() {
			return getRuleContext(AsgnstmtContext.class,0);
		}
		public LoadstorestmtContext loadstorestmt() {
			return getRuleContext(LoadstorestmtContext.class,0);
		}
		public TerminalNode LABEL() { return getToken(PAGrammarParser.LABEL, 0); }
		public TerminalNode RREG() { return getToken(PAGrammarParser.RREG, 0); }
		public TerminalNode FREG() { return getToken(PAGrammarParser.FREG, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((StmtContext)_localctx).arithstmt = arithstmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).arithstmt.result; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				((StmtContext)_localctx).iostmt = iostmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).iostmt.result; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				((StmtContext)_localctx).ifstmt = ifstmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).ifstmt.result; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				((StmtContext)_localctx).arrstmt = arrstmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).arrstmt.result; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				((StmtContext)_localctx).asgnstmt = asgnstmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).asgnstmt.result; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				((StmtContext)_localctx).loadstorestmt = loadstorestmt();
				 ((StmtContext)_localctx).result =  ((StmtContext)_localctx).loadstorestmt.result; 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				match(GOTO);
				setState(80);
				((StmtContext)_localctx).t = match(LABEL);

						curType = InstType.gotoL;
						((StmtContext)_localctx).result =  new Instruction(InstType.gotoL, (((StmtContext)_localctx).t!=null?((StmtContext)_localctx).t.getText():null));
					
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				((StmtContext)_localctx).t = match(RREG);
				setState(83);
				match(T__3);
				setState(84);
				((StmtContext)_localctx).v = match(FREG);

						curType = InstType.cvtf2i;
						((StmtContext)_localctx).result =  new Instruction(InstType.cvtf2i, (((StmtContext)_localctx).t!=null?((StmtContext)_localctx).t.getText():null), (((StmtContext)_localctx).v!=null?((StmtContext)_localctx).v.getText():null));
					
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				((StmtContext)_localctx).t = match(FREG);
				setState(87);
				match(T__3);
				setState(88);
				((StmtContext)_localctx).v = match(RREG);

						curType = InstType.cvti2f;
						((StmtContext)_localctx).result =  new Instruction(InstType.cvti2f, (((StmtContext)_localctx).t!=null?((StmtContext)_localctx).t.getText():null), (((StmtContext)_localctx).v!=null?((StmtContext)_localctx).v.getText():null));
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithstmtContext extends ParserRuleContext {
		public Instruction result;
		public Token v;
		public AexprContext aexpr;
		public AexprContext aexpr() {
			return getRuleContext(AexprContext.class,0);
		}
		public TerminalNode RREG() { return getToken(PAGrammarParser.RREG, 0); }
		public TerminalNode FREG() { return getToken(PAGrammarParser.FREG, 0); }
		public ArithstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterArithstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitArithstmt(this);
		}
	}

	public final ArithstmtContext arithstmt() throws RecognitionException {
		ArithstmtContext _localctx = new ArithstmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arithstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((ArithstmtContext)_localctx).v = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==RREG || _la==FREG) ) {
				((ArithstmtContext)_localctx).v = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(93);
			match(T__3);
			setState(94);
			((ArithstmtContext)_localctx).aexpr = aexpr();

						// expr에서 arithi, arithf, ifi, iff 중 하나의 명령문 생성하여 result에 돌려줌
						((ArithstmtContext)_localctx).result =  ((ArithstmtContext)_localctx).aexpr.result;  // 44번줄
						if (_localctx.result.type == InstType.arithi ||
						    _localctx.result.type == InstType.arithf) {
							// Instruction 객체 b는 instType과 피연산자 두개를 regs[2]에 넣어 돌려줌
							_localctx.result.lvalue = (((ArithstmtContext)_localctx).v!=null?((ArithstmtContext)_localctx).v.getText():null);
						} 
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstmtContext extends ParserRuleContext {
		public Instruction result;
		public BexprContext bexpr;
		public Token t;
		public BexprContext bexpr() {
			return getRuleContext(BexprContext.class,0);
		}
		public TerminalNode GOTO() { return getToken(PAGrammarParser.GOTO, 0); }
		public TerminalNode LABEL() { return getToken(PAGrammarParser.LABEL, 0); }
		public IfstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterIfstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitIfstmt(this);
		}
	}

	public final IfstmtContext ifstmt() throws RecognitionException {
		IfstmtContext _localctx = new IfstmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__4);
			setState(98);
			match(T__5);
			setState(99);
			((IfstmtContext)_localctx).bexpr = bexpr();
			setState(100);
			match(T__6);
			setState(101);
			match(GOTO);
			setState(102);
			((IfstmtContext)_localctx).t = match(LABEL);
			 
						((IfstmtContext)_localctx).result =  ((IfstmtContext)_localctx).bexpr.result;
						((IfstmtContext)_localctx).bexpr.result.gotoL = (((IfstmtContext)_localctx).t!=null?((IfstmtContext)_localctx).t.getText():null);
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrstmtContext extends ParserRuleContext {
		public Instruction result;
		public Token t;
		public Token v;
		public Token c;
		public Token a;
		public TerminalNode ID() { return getToken(PAGrammarParser.ID, 0); }
		public TerminalNode INT() { return getToken(PAGrammarParser.INT, 0); }
		public TerminalNode RREG() { return getToken(PAGrammarParser.RREG, 0); }
		public ArrstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterArrstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitArrstmt(this);
		}
	}

	public final ArrstmtContext arrstmt() throws RecognitionException {
		ArrstmtContext _localctx = new ArrstmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrstmt);
		int _la;
		try {
			setState(116);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				((ArrstmtContext)_localctx).t = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__7 || _la==T__8) ) {
					((ArrstmtContext)_localctx).t = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(106);
				((ArrstmtContext)_localctx).v = match(ID);
				setState(107);
				match(T__9);
				setState(108);
				((ArrstmtContext)_localctx).c = match(INT);
				setState(109);
				match(T__10);

							if ((((ArrstmtContext)_localctx).t!=null?((ArrstmtContext)_localctx).t.getText():null).equals("int")) {
								curType = InstType.arri;
								((ArrstmtContext)_localctx).result =  new Instruction(InstType.arri);
							} else {
								curType = InstType.arrf;
								((ArrstmtContext)_localctx).result =  new Instruction(InstType.arrf);
							}
							_localctx.result.id = (((ArrstmtContext)_localctx).v!=null?((ArrstmtContext)_localctx).v.getText():null);
							_localctx.result.ival = Integer.parseInt((((ArrstmtContext)_localctx).c!=null?((ArrstmtContext)_localctx).c.getText():null));
						
				}
				break;
			case RREG:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				((ArrstmtContext)_localctx).a = match(RREG);
				setState(112);
				match(T__3);
				setState(113);
				match(T__11);
				setState(114);
				((ArrstmtContext)_localctx).v = match(ID);

							curType = InstType.getaddr;
							((ArrstmtContext)_localctx).result =  new Instruction(InstType.getaddr, (((ArrstmtContext)_localctx).a!=null?((ArrstmtContext)_localctx).a.getText():null));
							_localctx.result.id = (((ArrstmtContext)_localctx).v!=null?((ArrstmtContext)_localctx).v.getText():null);
						
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadstorestmtContext extends ParserRuleContext {
		public Instruction result;
		public Token a;
		public Token t;
		public Token v;
		public Token b;
		public TerminalNode ID() { return getToken(PAGrammarParser.ID, 0); }
		public List<TerminalNode> RREG() { return getTokens(PAGrammarParser.RREG); }
		public TerminalNode RREG(int i) {
			return getToken(PAGrammarParser.RREG, i);
		}
		public TerminalNode FREG() { return getToken(PAGrammarParser.FREG, 0); }
		public LoadstorestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadstorestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).enterLoadstorestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PAGrammarListener ) ((PAGrammarListener)listener).exitLoadstorestmt(this);
		}
	}

	public final LoadstorestmtContext loadstorestmt() throws RecognitionException {
		LoadstorestmtContext _localctx = new LoadstorestmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loadstorestmt);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				((LoadstorestmtContext)_localctx).a = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==RREG || _la==FREG) ) {
					((LoadstorestmtContext)_localctx).a = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(119);
				match(T__3);
				setState(120);
				((LoadstorestmtContext)_localctx).t = match(ID);
